# cmscal

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  model.go  repos.bzl  sched.go
cmd/: BUILD.bazel  cmscal.go
cmd/cmscal/: BUILD.bazel  main.go
container/: BUILD.bazel  bazelstatus.sh  gentag.sh
docs/: index.md
